--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
-  color: white; 
+  color: white;
   font-family: "Roboto Light";
+  overflow: hidden;
 }
 
 h1 {
@@ -11,5 +12,15 @@ h2 {
 }
 
 h3 {
-  font-size: 25px; 
+  font-size: 20px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: rgba(0,0,0,0.2); 
 }
